--- a/shitlist/src/includes/footer.css
+++ b/shitlist/src/includes/footer.css
@@ -4,11 +4,11 @@
 }
 
 .fot{
-    background-color: yellow;
-    color:white;
+    background-color: white;
+    color:black;
     display: flex;
 }
 
 .left{
-    background-color: black;
+    background-color: white;
 }
