--- a/shitlist/src/includes/router.css
+++ b/shitlist/src/includes/router.css
@@ -5,14 +5,14 @@
 
 .headerBG{
     width:100%;
-    height: 500;
     background-color: aqua;
+    position: absolute;
+    
 
 }
 
 .headerBG img{
     width:100%;
     height: auto;
-    background-image:url(../images/background.jpg);
 
 }
